Updates testing -- still broken

--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -21953,6 +21953,426 @@
       "bloomSize": 1048646,
       "indexHash": "QmSQRVRRdUeP26fRsguoGXQPVCFKvPNixeNJUwmsyLRtYy",
       "indexSize": 26112864
+    },
+    {
+      "range": "015644405-015647318",
+      "bloomHash": "QmPkYt5g8HstCtRieRqVoj2KhJUE2RudZj5zFEiJsonJoS",
+      "bloomSize": 1048646,
+      "indexHash": "Qmd7E5VBYeQRgfcRGTHcXMYGbycd24wWNriuXvGTjCvn2v",
+      "indexSize": 26065500
+    },
+    {
+      "range": "015647319-015650348",
+      "bloomHash": "QmfFExHiLyShjhZV6rLYG66RJUJgbmP9qLJDXU4W5EBpRN",
+      "bloomSize": 917570,
+      "indexHash": "QmbEi6dR3vbRea6pTW7E1rx3RCQMczmhxLT2v58Wyy97ES",
+      "indexSize": 24593072
+    },
+    {
+      "range": "015650349-015653315",
+      "bloomHash": "QmPesnA5794Lpe9QqotMajjGCRr1FSd6ZtBufAzvFrHZj9",
+      "bloomSize": 1179722,
+      "indexHash": "QmYaUbdeT4de327jf7UgDVLkt39ExygVSK8STiw3R463Ps",
+      "indexSize": 28492680
+    },
+    {
+      "range": "015653316-015656338",
+      "bloomHash": "QmYrj8FGaMcEuiuQTtGxcaGTToMLwxWZV9jYC1kik6Te9a",
+      "bloomSize": 786494,
+      "indexHash": "QmSF5sLF1fPdQKGN9DaXRySwtVMA7gRTUcgNqb5pHnheZn",
+      "indexSize": 24354692
+    },
+    {
+      "range": "015656339-015659396",
+      "bloomHash": "QmWKivSZaBq1pHy9T7iE3uKWLW7ZMFrnWsmHbfTQvGEYhc",
+      "bloomSize": 917570,
+      "indexHash": "QmTpQ1bhBYRVf3HFKAuNr3K2vSvvsjxaGYT8pCdHP5Wqrk",
+      "indexSize": 25633072
+    },
+    {
+      "range": "015659397-015662306",
+      "bloomHash": "QmPeP6drj5vbFsFc78FuPcBQzSPXrkas7XX7soBM6wiKh2",
+      "bloomSize": 1048646,
+      "indexHash": "QmPywh1rdoYQDjPAQ8tNt1GFawC16fLMgEHVBNAasbWbt9",
+      "indexSize": 26037960
+    },
+    {
+      "range": "015662307-015665286",
+      "bloomHash": "QmRFPscAcXs6nP7UHS1gxFiognhRPvHefdr3bLgxmSg8wG",
+      "bloomSize": 917570,
+      "indexHash": "QmXzebPZnWTEtRm5fSGnoYt7EAhsAgLAtsqyzC9edWoAzc",
+      "indexSize": 24515836
+    },
+    {
+      "range": "015665287-015668233",
+      "bloomHash": "QmbnE2JaRMBtQ8SGn6b6tuubNuaexqRzA2J3fga3LnaSr1",
+      "bloomSize": 786494,
+      "indexHash": "Qmd3TkED9sxirXX5rfhhHPMwTZNzRK3EjnEdoGVX1CTDf8",
+      "indexSize": 24083988
+    },
+    {
+      "range": "015668234-015671135",
+      "bloomHash": "QmPJsLQ1AWJJkDSLSipKxJ66osD2fFKkSCmLFWzLRZiFAX",
+      "bloomSize": 786494,
+      "indexHash": "Qmb94eUMp8w5J3JSmX3zK2Zx3UZViQXiPmYCed51ECdFuh",
+      "indexSize": 24289908
+    },
+    {
+      "range": "015671136-015674049",
+      "bloomHash": "QmZfUWf7rm6U4xP76W1WyrdgW17zSa9TjCZQXnGURWcd4y",
+      "bloomSize": 1048646,
+      "indexHash": "QmRmHGmWAGM4yt4VXbSdJoasyAXERhdRxHc2Rbxu6We61K",
+      "indexSize": 26482188
+    },
+    {
+      "range": "015674050-015676848",
+      "bloomHash": "QmfJN2ZyChrwpnmTutPGkDXmvJNV6vUTYusPF5Tnjdo8rx",
+      "bloomSize": 917570,
+      "indexHash": "QmeoXXPVRfyK43z7NQQpYVSpTeTsUujdz7GSsceEfsmTDq",
+      "indexSize": 25545980
+    },
+    {
+      "range": "015676849-015679868",
+      "bloomHash": "QmSP398djDM8GppiWwXgzfUJSo8W6B2toJyX83e4W4ir4e",
+      "bloomSize": 1048646,
+      "indexHash": "QmZAwFzZTdBWRrjsRG69uSCsPSBGHTw2Kcu759JQTtZR7n",
+      "indexSize": 26584300
+    },
+    {
+      "range": "015679869-015682711",
+      "bloomHash": "QmNwjayZdRVus5ebeTEJPa8W8psjxXdkJX6w8xJC99iXu3",
+      "bloomSize": 1048646,
+      "indexHash": "QmfUzafi3Bq7kTgvMnDucvYmAjypZNUue9yMKQLmC8VYPU",
+      "indexSize": 27197884
+    },
+    {
+      "range": "015682712-015685630",
+      "bloomHash": "QmRMK9hQvKpYTtmiRw72YqqJA85MFdv6jBSR11hkwhJfNU",
+      "bloomSize": 917570,
+      "indexHash": "QmNpkckixDozh6uumc9T7TFevhH2nXg6Qkmm311NmTvFp4",
+      "indexSize": 24599960
+    },
+    {
+      "range": "015685631-015688540",
+      "bloomHash": "QmTfuCUyjgnTiH54FHvXz9FTjJGEYefx4X422kQTM1c33y",
+      "bloomSize": 1179722,
+      "indexHash": "QmdwvzkG1aTmiU4BHXssEfNbQvAiwftZUhxHGQij2tTCN6",
+      "indexSize": 28189156
+    },
+    {
+      "range": "015688541-015691508",
+      "bloomHash": "QmQ1HHstM7sAkyeG9tcWzoqAJmFWPzNtqsQvmr1TwTmxXi",
+      "bloomSize": 917570,
+      "indexHash": "QmW1h3TTkHUr81FHMkBEnPPCWoUSGfFJwimjKaFD96crj8",
+      "indexSize": 25437000
+    },
+    {
+      "range": "015691509-015694570",
+      "bloomHash": "QmTQKsdWETnWkBm3NCieA1VoXAfCwEkz2dKfQA1qSrQLh5",
+      "bloomSize": 1179722,
+      "indexHash": "QmTDSKyzarkCatfV5f8USkLvRUyzQEUq5D6G9ZtJtpYThm",
+      "indexSize": 27887032
+    },
+    {
+      "range": "015694571-015697566",
+      "bloomHash": "Qmc4V1i4AL7Sskj4mKrmSSwokU21wPBv46xs8oh7scKVUg",
+      "bloomSize": 1048646,
+      "indexHash": "QmQFFxHuQcfRnJ5ZocUgAozVUrfM7PTKgDZnyPCCDDDW6b",
+      "indexSize": 25891572
+    },
+    {
+      "range": "015697567-015700000",
+      "bloomHash": "QmNaEWHFNKqfJ2DgrKKeFWF7KFULTCbwYFDLPKDjdZnmDM",
+      "bloomSize": 786494,
+      "indexHash": "QmaehvFoSxBeE25WdqyKmzB7btGtsYrRdHMM4KJtKf7LVt",
+      "indexSize": 20191796
+    },
+    {
+      "range": "015700001-015703127",
+      "bloomHash": "QmdFqSJeNsbktJLhDtMYQe9Mp4RzkA3QZ1LVKNgNHdd7F7",
+      "bloomSize": 1048646,
+      "indexHash": "QmTVDLQgWJB67Ey2YrM5xHR7eoCmUvyQcDEDkrmLTHevSa",
+      "indexSize": 26783672
+    },
+    {
+      "range": "015703128-015706486",
+      "bloomHash": "QmVcJ9HjDa4dGGC8P2Z3UQRxL3Sj3Nd2qY24u5G4Zcg879",
+      "bloomSize": 1048646,
+      "indexHash": "QmcZkxgCKWcqSwLt9b5UwZDjrnQQ54HcGx1oAGt14gMZZu",
+      "indexSize": 26561588
+    },
+    {
+      "range": "015706487-015710446",
+      "bloomHash": "QmUrYosa4YRbscTtCF7TVZm5Fwxmk3KFzCngoBA3umo9eh",
+      "bloomSize": 1048646,
+      "indexHash": "QmZzJn2rYdA1RhBY9aQEW524dn6vi6fEgXGYjhab4qXHXw",
+      "indexSize": 27144864
+    },
+    {
+      "range": "015710447-015714065",
+      "bloomHash": "QmXqaEn8LTNzLCGq2BNzRqHAS5Vcjsfb87MJpZWPgZCn6C",
+      "bloomSize": 1048646,
+      "indexHash": "QmZu7yXyLE4EGAEDdFvsK9WS6qU3pC68bNFUypXgpHWTVQ",
+      "indexSize": 26277396
+    },
+    {
+      "range": "015714066-015717833",
+      "bloomHash": "QmSQGZQzyCLB4PTowvjtYbVwhRfHNS9iM1HdSkFHx5hPYw",
+      "bloomSize": 1179722,
+      "indexHash": "QmSoyvS5SRDyak6nnXfMFmQpPNTjm6C5HG2QCRodE3hj8h",
+      "indexSize": 27318216
+    },
+    {
+      "range": "015717834-015720944",
+      "bloomHash": "QmedtRAPapaA7aaFxRpmggSuhKoE2bS58SJdUoa9iw6vwv",
+      "bloomSize": 1048646,
+      "indexHash": "QmTVFeZJ99PCG9vEQsjd1KQfSWLLyBq8vdA34a6h8jqgrY",
+      "indexSize": 26885760
+    },
+    {
+      "range": "015720945-015724377",
+      "bloomHash": "QmUnfLaqJes6Y6PHijcDMiRHZECPKqtFBYFR4ymwvohSre",
+      "bloomSize": 1048646,
+      "indexHash": "QmX1HkwBwe1xef8gsP8v4w151UJxgyXqAQngSgGSAawqem",
+      "indexSize": 26694968
+    },
+    {
+      "range": "015724378-015727559",
+      "bloomHash": "QmcXsq4UR1i9P8G3RukZoPwXVP1CKfxwfUCYFbNaAt3b5G",
+      "bloomSize": 1048646,
+      "indexHash": "QmYWFQerbPbqHWWFAUznoxCDKX9sNvM7WsS5XrW8j1Fog2",
+      "indexSize": 26017700
+    },
+    {
+      "range": "015727560-015731117",
+      "bloomHash": "QmXVHw1RpvkPLmHsB497Md65otE34HRafPfMhW5vBw3ci7",
+      "bloomSize": 1048646,
+      "indexHash": "QmQ3yQ4PNPfdqSZV4y3surFPLGJKTrSQrKqwQJjgbdxP6W",
+      "indexSize": 26460124
+    },
+    {
+      "range": "015731118-015734402",
+      "bloomHash": "QmR1oAD98etQwe3d2x6sX2EgBjoLEZoF9hbkjnETVX7CSS",
+      "bloomSize": 1048646,
+      "indexHash": "QmZx5C9XkBG473c47WuNj5eX5L8AKyxyjmAFTvQxFupNcW",
+      "indexSize": 26131648
+    },
+    {
+      "range": "015734403-015737846",
+      "bloomHash": "QmTsgxSVwsR899LZ6XajSQw7tZpqAMBFS1Me1X4QmyXwNE",
+      "bloomSize": 1048646,
+      "indexHash": "QmPWK68tHz3uXHocDRdmmjUshb9XwbHsanA7HnpqKD36XA",
+      "indexSize": 26232560
+    },
+    {
+      "range": "015737847-015740789",
+      "bloomHash": "QmPHoRdP7vWeJLGv4A5xsWLmrKuxuhntJ4ffMBfwf4KvR4",
+      "bloomSize": 917570,
+      "indexHash": "QmY5QoDNXw8mgMHNCpnapBvTCgzomKWXCMF89uy8ES3aR6",
+      "indexSize": 25552720
+    },
+    {
+      "range": "015740790-015743995",
+      "bloomHash": "QmNbzVuR9by1KnnCFLScMSvKZaXywsWw1rxnP2DK7xhWW1",
+      "bloomSize": 917570,
+      "indexHash": "QmUmtX6T9VmumyCzNkVajCX6zi4xNHy4yYdcte2MyPmvZ2",
+      "indexSize": 25423772
+    },
+    {
+      "range": "015743996-015747320",
+      "bloomHash": "QmVav1bHBm8cSZKMLtaSeK5xANnUQEnrrXEBivR5tCnfXE",
+      "bloomSize": 1048646,
+      "indexHash": "QmdMGhfrLGiVrvUAZb9AbppbRm2efGf8uCCvAdK1U1obhc",
+      "indexSize": 26782468
+    },
+    {
+      "range": "015747321-015750651",
+      "bloomHash": "QmPih7dgeGrX59dqc8Kt8chJPVuf4Uwti7N3SCZ7gGHmbA",
+      "bloomSize": 1048646,
+      "indexHash": "QmTGZ4ipWDPqDfRXEXSPxP6KCUqtaPSE81D3nV1vdBKAjS",
+      "indexSize": 25898148
+    },
+    {
+      "range": "015750652-015754210",
+      "bloomHash": "QmUEeBoZK4TX4guabUMi5WwstBeKnmLckkJj7YVa4WUWZ8",
+      "bloomSize": 1310798,
+      "indexHash": "QmNmkFKZRXyXtkLqVD5ByWbnHwXieDmqjdFU825wvzpAR7",
+      "indexSize": 29054652
+    },
+    {
+      "range": "015754211-015757669",
+      "bloomHash": "QmZBf1BMNcYrTGZMzvQ4BcqyTDiUnYYBKNHBvCg1vWZCic",
+      "bloomSize": 917570,
+      "indexHash": "QmTHr3TL19DCSCG6StiZvE6F6iTmP3YVQrD35MEhHutUcH",
+      "indexSize": 25597008
+    },
+    {
+      "range": "015757670-015761302",
+      "bloomHash": "QmaX565MjQSUULEiHRBn9nxTJutQriiunZ617Qq1pXnRd1",
+      "bloomSize": 1048646,
+      "indexHash": "QmcAfppfU8S2TseCm6MKVcS2XH8CKusA3cpXgsCs6LsVx1",
+      "indexSize": 27187780
+    },
+    {
+      "range": "015761303-015764651",
+      "bloomHash": "QmR6DjmTUKtxeTVwGYg63rM4ukMf5n8aNFkmvd6B876iG3",
+      "bloomSize": 917570,
+      "indexHash": "QmSJj1j2ytQgeM7FDJ6NXjwcTeqh5ePMT2za1Hgwh2UHDf",
+      "indexSize": 24659000
+    },
+    {
+      "range": "015764652-015767879",
+      "bloomHash": "QmTazZLNm7WnX6bfqqWCKqBTMf8o1zQNQFML8nx7ja4DRC",
+      "bloomSize": 1179722,
+      "indexHash": "QmTgLEQRux4qvA61yrHB6bSpcdq2mQvMt3Zpd7oSq4k57i",
+      "indexSize": 28012384
+    },
+    {
+      "range": "015767880-015770888",
+      "bloomHash": "QmcQE5GWV4f6DpjbtQu1iFFBTNwKpVRQKo9C1gGuF1pDp4",
+      "bloomSize": 786494,
+      "indexHash": "QmZJ3gXnC8dmyzFwSr2ywG3WEKLTPGYxgRnLN2GkTtyVHt",
+      "indexSize": 24007612
+    },
+    {
+      "range": "015770889-015774124",
+      "bloomHash": "QmVCsjzUhyfWq4NWTkzRefxKSHmBeDaUuoGoEW7kZoTiJB",
+      "bloomSize": 917570,
+      "indexHash": "QmS5fwcqbUzEdeFihSz5iysA2EJER2CFjFJhzw4JqVDSRW",
+      "indexSize": 25735764
+    },
+    {
+      "range": "015774125-015777311",
+      "bloomHash": "QmWVAwLYcV1No6Q8CeiMQoBtEvKRknfa4SAUhsG7Ax4ayc",
+      "bloomSize": 917570,
+      "indexHash": "QmdRpUcPAtKm5gon6bma2qCg46c8yxbkgQm3LtYNPMYqp3",
+      "indexSize": 24887344
+    },
+    {
+      "range": "015777312-015780666",
+      "bloomHash": "QmY6kh56Ct4m43VzRfBXFYtv7g4UmKpdREwnpYhFEBwnSa",
+      "bloomSize": 917570,
+      "indexHash": "QmRy9wbjBRp7asfEKc82GAT6o5Dm9GyjM3kuE48DeS2zqp",
+      "indexSize": 25409216
+    },
+    {
+      "range": "015780667-015783858",
+      "bloomHash": "Qmcxk3Ss9vFnr5a5mE9BpbE2Ke4D878GV3pai2aqoUH5Xw",
+      "bloomSize": 917570,
+      "indexHash": "QmQWvjo4iHsWcV9afwuJStyraV7ZNiVkQqnDo1DN9J45bu",
+      "indexSize": 25647296
+    },
+    {
+      "range": "015783859-015786874",
+      "bloomHash": "QmayYTo9eUCdzpiksy8s4L8iQnHBbLGMPXDbtPYPmX3qLQ",
+      "bloomSize": 917570,
+      "indexHash": "QmbyGnG3b2t2waXjUGTnDpkzUKALTUUmr1VL41RWRvpXe4",
+      "indexSize": 25086220
+    },
+    {
+      "range": "015786875-015789949",
+      "bloomHash": "QmQ8Ks15aixSyNKAPsqKpqaicoQPWduN1KMHsAmebCMB5g",
+      "bloomSize": 1048646,
+      "indexHash": "Qme4xUiS5PLEYRAJ6YSC1EucVxPMtLPuCyPwwKkkukd5ht",
+      "indexSize": 26354800
+    },
+    {
+      "range": "015789950-015793045",
+      "bloomHash": "QmXUKSEku6AxWdm31DuZiCkfNF1vZHRh635G8RBsA7Rr2R",
+      "bloomSize": 917570,
+      "indexHash": "QmXBMBiCLzZCXBs9PSWochP2YsyN7gMehBAtxJsSUaMN5N",
+      "indexSize": 24896320
+    },
+    {
+      "range": "015793046-015796136",
+      "bloomHash": "QmNgoy5ANnh3orWFgwSBNHuoac1YippL2et73FK65vZ961",
+      "bloomSize": 1179722,
+      "indexHash": "QmeACk9B9Q463PChDinVGchR3CZJoonpNFbYFFebHSkDhP",
+      "indexSize": 27416036
+    },
+    {
+      "range": "015796137-015799223",
+      "bloomHash": "QmZHGAMsVJTQpxbhkfskCJhuAaSUYWK2a3rissDVwRLZTz",
+      "bloomSize": 917570,
+      "indexHash": "QmVqUEfHaCzdG4dqtbwSEx5v1ZUv9GwXe6eihBWEeecgX2",
+      "indexSize": 24683776
+    },
+    {
+      "range": "015799224-015800000",
+      "bloomHash": "QmSNab4vgmfyaVSVEWNYodfiiMQjfVPTWEKvMmorMevmWR",
+      "bloomSize": 262190,
+      "indexHash": "Qmcd2SwAZvjr7RgwDJKrPoooL9GdsskoCsWAxaRkfj8Szd",
+      "indexSize": 6230988
+    },
+    {
+      "range": "015800001-015803663",
+      "bloomHash": "QmUD82vhCDnL6HuBpm17uvRKd7dVxSP9qyMdbKcuvKfSwQ",
+      "bloomSize": 1179722,
+      "indexHash": "QmZi85c4UGgFeeY989AxmsMtm3XcaHUzR6WP6wWmK5q7r4",
+      "indexSize": 27639860
+    },
+    {
+      "range": "015803664-015807154",
+      "bloomHash": "QmNmniRs9bgx9xR17YpXfy68nYZN7qdK4oS2wvMmC7BrPJ",
+      "bloomSize": 917570,
+      "indexHash": "QmWdx6tvS167ye4ifaVtArqkX2VQiZa36pHmi2k6KreRsD",
+      "indexSize": 25204104
+    },
+    {
+      "range": "015807155-015810763",
+      "bloomHash": "QmNpuwmToUohu8e3BN7XZi2pc2VFrToc4KQ6dksRUEjpY8",
+      "bloomSize": 1048646,
+      "indexHash": "QmYcemSSSER2Ecz3x9pJusy5ZYeACQVTzDXiGPKqBzNs5c",
+      "indexSize": 26173816
+    },
+    {
+      "range": "015810764-015813944",
+      "bloomHash": "QmSHz71UXfDtPHSxWPUc5SbtN3pcSP35ZX4c2dZrktWpLa",
+      "bloomSize": 917570,
+      "indexHash": "QmaBT32jHAUrk3UUpNx1de4ZQqGBFuwySRa5iunxnvtHQr",
+      "indexSize": 24972044
+    },
+    {
+      "range": "015813945-015817229",
+      "bloomHash": "QmVASdcKsFrCvHZuA1bVdGY8Q6eU8MjTGomoBMboTEPpzp",
+      "bloomSize": 1179722,
+      "indexHash": "QmPyhoCKTKhXd3AoM2ZuWpsdTEFXgERLfGYrVevG7oqVHi",
+      "indexSize": 27930600
+    },
+    {
+      "range": "015817230-015820428",
+      "bloomHash": "QmZdFo2bHRXqoP4DbeGbSU4yQYNT75bCyGxSvmrLTFDXjK",
+      "bloomSize": 917570,
+      "indexHash": "QmWjSLAgrnBs418eUp8Dh89rajhFzzmFD4Ae8oBYRYmw3c",
+      "indexSize": 25662304
+    },
+    {
+      "range": "015820429-015823782",
+      "bloomHash": "QmfFTvNBAfZJePd2ZSNz6PpXeXE4mHQR5aZjz3LSVY6gQ7",
+      "bloomSize": 1179722,
+      "indexHash": "QmRPFLiQeeWjy4ygLLR3kMg46Kav5C1BmYGuLFCAFS9w7n",
+      "indexSize": 27598464
+    },
+    {
+      "range": "015823783-015826886",
+      "bloomHash": "QmX3YBCVZcr72MdHZYnC9rZvg61LEsWEU2FVNGzHhxEW1J",
+      "bloomSize": 1048646,
+      "indexHash": "QmReRKSaKM6W5k3RK1dstQdEbWY5XD7r47HBM6uapGfkQH",
+      "indexSize": 26114544
+    },
+    {
+      "range": "015826887-015830052",
+      "bloomHash": "QmaGbkmsjoWVYJthDwov8t8j5d5sQ4Q2Z3WCU9tGt4sTuF",
+      "bloomSize": 917570,
+      "indexHash": "QmTKemUpzMy5JpZBjnMcYmKAzxqPCJrAe7dbq5dEFDdb7r",
+      "indexSize": 25201828
+    },
+    {
+      "range": "015830053-015833083",
+      "bloomHash": "QmQc6QLG5khc5FMEkYTxkBZX67BDX9KKLZNdN8tKMzTGZU",
+      "bloomSize": 1048646,
+      "indexHash": "Qma8oEgD9bs6uxzS3HMFrvrtmcGjNKxmZCqXhXtobqUDN2",
+      "indexSize": 26811836
     }
   ]
 }
