trying to catch back up to best available code

--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -22373,6 +22373,55 @@
       "bloomSize": 1048646,
       "indexHash": "Qma8oEgD9bs6uxzS3HMFrvrtmcGjNKxmZCqXhXtobqUDN2",
       "indexSize": 26811836
+    },
+    {
+      "range": "015835523-015836142",
+      "bloomHash": "QmTZ9r6E4mqsn4ptDjmyFQ9W84mt3rJEdEJ7uZo8rPcPqG",
+      "bloomSize": 917570,
+      "indexHash": "QmQeHwe3WkfJEhDb4vCtSDStQ7GvBytNRjVzYSQHM6kwPy",
+      "indexSize": 25480752
+    },
+    {
+      "range": "015836143-015839282",
+      "bloomHash": "QmYdh3EWQZqtDGi8NsmCUcbW1koh7nJR45o6xV7aoPcTPt",
+      "bloomSize": 1179722,
+      "indexHash": "Qmdxc4asyYNXecsj6qtXGwQw34E7ZjZCjCrDGrQ8QFqFMM",
+      "indexSize": 28530648
+    },
+    {
+      "range": "015839283-015842168",
+      "bloomHash": "QmQUYqddysJ5W6cynMvrtFgzk8YCjjz4EVdt3e85AL5tDU",
+      "bloomSize": 1048646,
+      "indexHash": "QmeCWEeg29yZtxLuUMVrL77PfQHLSFMucurgbNbd1Huj6m",
+      "indexSize": 26243784
+    },
+    {
+      "range": "015842169-015845311",
+      "bloomHash": "QmcHQ46PRZTEAZf6i9feo7oDkEJ7UQuWDDNj79VGkGMHwu",
+      "bloomSize": 1048646,
+      "indexHash": "QmTBwts8F4DYu6nQnXKWXvo6ZGGNXP959c95h3XAStzzfu",
+      "indexSize": 26476880
+    },
+    {
+      "range": "015845312-015848481",
+      "bloomHash": "QmfA1DZ3sPgCTb8oYf3n1cDtjTUF3oLD5hkam2qmj7dYRZ",
+      "bloomSize": 1048646,
+      "indexHash": "QmVgKnU9N6i8FoQPAinEWYAeVkzEXu5qMuXVU9etSh48Hu",
+      "indexSize": 26271956
+    },
+    {
+      "range": "015848482-015851951",
+      "bloomHash": "QmUGkSNDAtPRcwbexxByTPQpqViLijScpoSd6bpfQqSRwK",
+      "bloomSize": 917570,
+      "indexHash": "QmXJ6gHU5jRuwX9xEW768Gityks1XnSp1EkGUEqcz7dR9b",
+      "indexSize": 25575912
+    },
+    {
+      "range": "015851952-015854966",
+      "bloomHash": "QmNg5sSPcRVJEAPR2zDC1uci2P75XxipYbFS7SedHZorM8",
+      "bloomSize": 1048646,
+      "indexHash": "QmfQwRTqYuyr3wbA4x1cXX9LzZdjAGoz3YxqBUegd3jYW9",
+      "indexSize": 26691356
     }
   ]
 }
