--- a/src/other/install/per-chain/mainnet/manifest.json
+++ b/src/other/install/per-chain/mainnet/manifest.json
@@ -22373,6 +22373,251 @@
       "bloomSize": 1048646,
       "indexHash": "Qma8oEgD9bs6uxzS3HMFrvrtmcGjNKxmZCqXhXtobqUDN2",
       "indexSize": 26811836
+    },
+    {
+      "range": "015833084-015836142",
+      "bloomHash": "QmTZ9r6E4mqsn4ptDjmyFQ9W84mt3rJEdEJ7uZo8rPcPqG",
+      "bloomSize": 917570,
+      "indexHash": "QmQeHwe3WkfJEhDb4vCtSDStQ7GvBytNRjVzYSQHM6kwPy",
+      "indexSize": 25480752
+    },
+    {
+      "range": "015836143-015839282",
+      "bloomHash": "QmYdh3EWQZqtDGi8NsmCUcbW1koh7nJR45o6xV7aoPcTPt",
+      "bloomSize": 1179722,
+      "indexHash": "Qmdxc4asyYNXecsj6qtXGwQw34E7ZjZCjCrDGrQ8QFqFMM",
+      "indexSize": 28530648
+    },
+    {
+      "range": "015839283-015842168",
+      "bloomHash": "QmQUYqddysJ5W6cynMvrtFgzk8YCjjz4EVdt3e85AL5tDU",
+      "bloomSize": 1048646,
+      "indexHash": "QmeCWEeg29yZtxLuUMVrL77PfQHLSFMucurgbNbd1Huj6m",
+      "indexSize": 26243784
+    },
+    {
+      "range": "015842169-015845311",
+      "bloomHash": "QmcHQ46PRZTEAZf6i9feo7oDkEJ7UQuWDDNj79VGkGMHwu",
+      "bloomSize": 1048646,
+      "indexHash": "QmTBwts8F4DYu6nQnXKWXvo6ZGGNXP959c95h3XAStzzfu",
+      "indexSize": 26476880
+    },
+    {
+      "range": "015845312-015848481",
+      "bloomHash": "QmfA1DZ3sPgCTb8oYf3n1cDtjTUF3oLD5hkam2qmj7dYRZ",
+      "bloomSize": 1048646,
+      "indexHash": "QmVgKnU9N6i8FoQPAinEWYAeVkzEXu5qMuXVU9etSh48Hu",
+      "indexSize": 26271956
+    },
+    {
+      "range": "015848482-015851951",
+      "bloomHash": "QmUGkSNDAtPRcwbexxByTPQpqViLijScpoSd6bpfQqSRwK",
+      "bloomSize": 917570,
+      "indexHash": "QmXJ6gHU5jRuwX9xEW768Gityks1XnSp1EkGUEqcz7dR9b",
+      "indexSize": 25575912
+    },
+    {
+      "range": "015851952-015854966",
+      "bloomHash": "QmNg5sSPcRVJEAPR2zDC1uci2P75XxipYbFS7SedHZorM8",
+      "bloomSize": 1048646,
+      "indexHash": "QmfQwRTqYuyr3wbA4x1cXX9LzZdjAGoz3YxqBUegd3jYW9",
+      "indexSize": 26691356
+    },
+    {
+      "range": "015854967-015858140",
+      "bloomHash": "QmV8aNZSVVjY3BdD7EHu8L55Wg16wJbfDyvNExQLmXoWKB",
+      "bloomSize": 1048646,
+      "indexHash": "QmakGAxS9AcwzQ4akPTNeWRNvQHPgbGGNf8BtgGcKicwmi",
+      "indexSize": 26194684
+    },
+    {
+      "range": "015858141-015861376",
+      "bloomHash": "QmPK36UUNFa1Wx916PkTuWs9GKUte2URU46TzK1zWHGQuk",
+      "bloomSize": 1179722,
+      "indexHash": "QmY6rwhTT8GpUkeAV78fqSrfMjsQmGd8zH7FgXfyLacqGL",
+      "indexSize": 27913844
+    },
+    {
+      "range": "015861377-015864566",
+      "bloomHash": "QmYvoyhgGQfEKiUNVwqi94Fi9tbuUzddntdp6MquYZ4yVQ",
+      "bloomSize": 917570,
+      "indexHash": "QmSqtUJaUq3XdbqKJWRRzESzNdGQJoDJCD51Ab16xSQCxT",
+      "indexSize": 25091208
+    },
+    {
+      "range": "015864567-015867874",
+      "bloomHash": "QmYrtHhb32kPtwQw6RvVxr4W8da11NEiQeqYo5fUecooFu",
+      "bloomSize": 1179722,
+      "indexHash": "QmbcPn1yAiSxF1rXKAHMYcrJKEhtUHVnqZmDLbZJimvRfP",
+      "indexSize": 27455644
+    },
+    {
+      "range": "015867875-015871002",
+      "bloomHash": "QmUhG7VLRoLdMy8xgczWoyxZUtEv3ReKSaP1U4zacfAdC7",
+      "bloomSize": 917570,
+      "indexHash": "QmamCxWkeAGPJrULKTXe1BQz3irivEdkyW5iitgSy9yWXW",
+      "indexSize": 25362488
+    },
+    {
+      "range": "015871003-015874121",
+      "bloomHash": "QmfHSx6YNvy1a1rXnyg9HNz3EUdgeTbEv1FqNgeWXZGAqS",
+      "bloomSize": 1179722,
+      "indexHash": "QmTZeQFpDrA1uGBkv3eMuvBeBZDz6xFsFdgUMc43HP7DXN",
+      "indexSize": 27799984
+    },
+    {
+      "range": "015874122-015877225",
+      "bloomHash": "QmWGP1AZuUkFoQ82MN1E28Z3cPubXY52nnTe8SevwPd8AP",
+      "bloomSize": 1048646,
+      "indexHash": "QmQNG9NGxk5bgjWz2489kD7F52j1kaeb7FhEAMXKQmbDaK",
+      "indexSize": 26028992
+    },
+    {
+      "range": "015877226-015880565",
+      "bloomHash": "QmRpVdRkVWapgFyLKUMghNcUwVhyohH65VmwmSoUgXk8kd",
+      "bloomSize": 1048646,
+      "indexHash": "QmbhevdPNvwTYv8JagLgPGGL7EWrRqpav7HLXa3xqf5DRM",
+      "indexSize": 26526392
+    },
+    {
+      "range": "015880566-015883761",
+      "bloomHash": "QmUXmSkAz7eWH8niNqGpwyqTDiWBpBxbpGQNe54AcAcqCf",
+      "bloomSize": 1048646,
+      "indexHash": "QmYevrCLA8L3eVpvywas6mEzVDvASbnDsGVJwsTxf2Cey7",
+      "indexSize": 26803612
+    },
+    {
+      "range": "015883762-015887056",
+      "bloomHash": "QmerzMao9bhRW6SzqMVRbKCVPnP4QovWNxmv1SB5f9nAmb",
+      "bloomSize": 917570,
+      "indexHash": "QmUDTZLxW7pQFdAs8bNVjFNzoMrBFBQsvyzeNeMqaVHQQ7",
+      "indexSize": 25706156
+    },
+    {
+      "range": "015887057-015890178",
+      "bloomHash": "QmSzYP6DixiUatb8FZCc5jpRVncXwkiqf9mys7vWcQY6Mk",
+      "bloomSize": 1048646,
+      "indexHash": "QmQba5v5DKhrcuvFgUGuNWNhMVDiFVzY81yzLP6cyX8FcG",
+      "indexSize": 26636636
+    },
+    {
+      "range": "015890179-015893306",
+      "bloomHash": "QmeFv2r6iGCcb5FiaJK3FQthLMVYFJbsh1McZ7zKWYuCDU",
+      "bloomSize": 917570,
+      "indexHash": "QmR2BvKXoDEeBXw6s67VM9epiVojQxny9c2Wx7QmzD71q6",
+      "indexSize": 25266124
+    },
+    {
+      "range": "015893307-015896682",
+      "bloomHash": "QmZXEg72wzdP9ZcBaR83EhfpotbNPNkJAwL8WH17uy884G",
+      "bloomSize": 1179722,
+      "indexHash": "QmY4CJgxGnqFCUKzBSbbJYa6XP2oETTEsmAbm72DhFGSoD",
+      "indexSize": 28156016
+    },
+    {
+      "range": "015896683-015899714",
+      "bloomHash": "QmPSAdSHr3b5chL582KMaAvXitS2zaxGR3a28c5wPa5u26",
+      "bloomSize": 917570,
+      "indexHash": "QmZNDMmjqXYuQnb6SYTwJuGM8bwBceQkH8gtyyH2Xhkbau",
+      "indexSize": 25075552
+    },
+    {
+      "range": "015899715-015900000",
+      "bloomHash": "QmcDd6fYVbM4PUoLeKHvpM2ERWkcjxwBCgo3PuhtPkzWkT",
+      "bloomSize": 131114,
+      "indexHash": "QmRazARtsSvBqHrPfLWCr3KDrp9cV4aEhmpmPXLcdUcrQQ",
+      "indexSize": 2573724
+    },
+    {
+      "range": "015900001-015903656",
+      "bloomHash": "QmcoBYgatm1mqwbjo4MCWVxZw96rvr2FBchf6jpQPK6ycH",
+      "bloomSize": 1048646,
+      "indexHash": "QmcgkfWd6pYcApqViRjnX7fsz3QnwZy3nVKCGf1ouYFNcf",
+      "indexSize": 26964440
+    },
+    {
+      "range": "015903657-015906773",
+      "bloomHash": "QmSvYjHAHtF3qichpQfDWe3BADyEHdC7Hm1sprNZNYiiZH",
+      "bloomSize": 1310798,
+      "indexHash": "QmPH3NhuzFJB6p9TNsEVHukVrciKEWDahERLwCaP4haAGj",
+      "indexSize": 28879548
+    },
+    {
+      "range": "015906774-015910673",
+      "bloomHash": "QmXMvFxTfdNfp1WRMz9xPag8vSmo5WXCHSZrZFVLn74juv",
+      "bloomSize": 1048646,
+      "indexHash": "QmdLtVnJa1WAgYtcK2BLeMoCrG7esNEnthpxeByrfL4ti7",
+      "indexSize": 26747428
+    },
+    {
+      "range": "015910674-015913843",
+      "bloomHash": "QmQdWSNCwEK2ZNpUx27oabrvhG6FWTbLZP9mdSxhGFa2xw",
+      "bloomSize": 917570,
+      "indexHash": "QmPKt1kR9E8Hr9cpkaC26ZuAditvtXVzQRt4zRQzNJzZeQ",
+      "indexSize": 25289820
+    },
+    {
+      "range": "015913844-015917185",
+      "bloomHash": "QmPGLjM8AUCxXJRJxywiAxKDjDSKGu1kqRrdLnGZCH5Jd7",
+      "bloomSize": 917570,
+      "indexHash": "QmenbNLsiLY6MuUVhVxeRSMMa2sVcioiPf7wrjsokYswrd",
+      "indexSize": 25757944
+    },
+    {
+      "range": "015917186-015920120",
+      "bloomHash": "QmT3SyDNSyMNXhUgzp1oSPgYRRYwcApmcR9kQu482VAA6x",
+      "bloomSize": 1179722,
+      "indexHash": "QmZ9ZBEBS9DyLhKvMd3eLWduGdPaySPfvmrjEmEGmbxFgu",
+      "indexSize": 27907080
+    },
+    {
+      "range": "015920121-015923181",
+      "bloomHash": "QmWsx5Bq6A3LoqJdd3v2ZfMrxtCqBzgu2TVj3jDLf9S34Q",
+      "bloomSize": 917570,
+      "indexHash": "QmQErsG2PjxkA5g39TmcwxeCyVQcqYCnXsvz64DDfWeoLo",
+      "indexSize": 24989284
+    },
+    {
+      "range": "015923182-015926370",
+      "bloomHash": "QmepszqZgqKCHNKARs8qwekV519NJzGMGEbDjNAmw7dVU1",
+      "bloomSize": 917570,
+      "indexHash": "QmZQi959oYT498HFJvbVyrQD3udA5Rbbp4Xnq2NBMEmtnA",
+      "indexSize": 25798444
+    },
+    {
+      "range": "015926371-015929051",
+      "bloomHash": "QmXKRyhK9otwLNKyeCMtHQThRpQo5j5Ewz64RNKkZPQ8DG",
+      "bloomSize": 786494,
+      "indexHash": "QmZt1FXLYjusgcwqvCfFtJ4MHiCC5sneNrGmyJMEwSmmGV",
+      "indexSize": 24347452
+    },
+    {
+      "range": "015929052-015931826",
+      "bloomHash": "QmezQzQVhpUjund9hHb2VHBT6SzJYfiD67mJoxYjDiEmVh",
+      "bloomSize": 917570,
+      "indexHash": "QmWZrJfFmGwU89nxveoK2Q3X179XoM7KNLusWJBtRZZeWz",
+      "indexSize": 25321460
+    },
+    {
+      "range": "015931827-015934515",
+      "bloomHash": "QmTSVQbQerXdbzQpyHyPonzdHB2HtVVmDdai2P2gnCd7MB",
+      "bloomSize": 917570,
+      "indexHash": "QmatSDbAUq7aKhuERvHUTKNWBRA43NzHNGGgHLVFNSfvPa",
+      "indexSize": 25188072
+    },
+    {
+      "range": "015934516-015937107",
+      "bloomHash": "QmR1Pn71y3XDSxecom6eTC7QktAsZdLov8yoVNeH3zohQJ",
+      "bloomSize": 917570,
+      "indexHash": "QmUhKb6gheBGrKrMQDR6VTvf91RtrkHEcA5xAJviUkcbbW",
+      "indexSize": 24914392
+    },
+    {
+      "range": "015937108-015939915",
+      "bloomHash": "QmczemppGo4ixmcfQ72xsX8HTYkz8ASj2f3zS32rNbfJzS",
+      "bloomSize": 917570,
+      "indexHash": "QmUe4Vo896SL2BfSPdMBjYhDQFsrDvQfpkm1SfFc5LExnY",
+      "indexSize": 25231832
     }
   ]
 }
